# ABSA

./: .gitignore  .vercelignore  Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  vercel.json
ABSA backend/: Dockerfile  inference.py  requirements.txt  server.py  task_easy.py  task_hard.py  task_medium.py  test_api.py
ABSA backend/env/: __init__.py  environment.py  models.py
ABSA backend/tasks/: __init__.py  base.py  full_absa.py  habit_streak_builder.py  screen_time_reducer.py
ABSA-frontend/: .env.example  next.config.mjs  vercel.json
ABSA-frontend/app/: layout.tsx  page.tsx
ABSA-frontend/components/dashboard/: episode-score.tsx  reward-chart.tsx  rl-insights.tsx  sidebar.tsx  timeline.tsx
ABSA-frontend/lib/: api.ts  rl-engine.ts
server/: app.py
